--- a/kde/kdiagram/PKGBUILD
+++ b/kde/kdiagram/PKGBUILD
@@ -5,7 +5,7 @@ pkgname=kdiagram
 pkgver=2.8.0
 pkgrel=1
 pkgdesc="Powerful libraries for creating business diagrams"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://www.kde.org/"
 license=(GPL2)
 depends=(qt5-svg)
