--- a/kde/grantlee-editor/PKGBUILD
+++ b/kde/grantlee-editor/PKGBUILD
@@ -3,7 +3,7 @@
 # Maintainer: Felix Yan <felixonmars@archlinux.org>
 
 pkgname=grantlee-editor
-pkgver=21.12.1
+pkgver=21.12.3
 pkgrel=1
 pkgdesc='Editor for Grantlee themes'
 arch=(x86_64 powerpc64le)
@@ -13,11 +13,12 @@ depends=(messagelib ktexteditor)
 makedepends=(extra-cmake-modules kdoctools boost)
 groups=(kde-applications kde-pim)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('8b332465900531d8dbce0844c2b41de5a6418962326dfcf0a9dc0b173e8278e4'
+sha256sums=('c202a8b20012b4339930341ec9aee426e8740c2d3d14f04a4a8c7afe980d1e03'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
               D81C0CB38EB725EF6691C385BB463350D6EF31EF) # Heiko Becker <heiko.becker@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
