--- a/kde/libkipi/PKGBUILD
+++ b/kde/libkipi/PKGBUILD
@@ -4,20 +4,21 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=libkipi
-pkgver=21.12.1
+pkgver=21.12.3
 pkgrel=1
 pkgdesc='An interface to use kipi-plugins from a KDE application'
 url='https://www.kde.org/'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=(GPL LGPL FDL)
 depends=(kxmlgui kservice hicolor-icon-theme)
 makedepends=(extra-cmake-modules)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('7eb5921935c41f58d8ebde6d9ce3aa5d76320fe32beb5f76c3ab9e260e1ce51a'
+sha256sums=('ec21153b3237c4f8a0bb9ce58498ae92d7e7d0362167772bace872d94ce45370'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
               D81C0CB38EB725EF6691C385BB463350D6EF31EF) # Heiko Becker <heiko.becker@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
