--- a/kde/gwenview/PKGBUILD
+++ b/kde/gwenview/PKGBUILD
@@ -4,11 +4,11 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=gwenview
-pkgver=21.12.1
+pkgver=21.12.3
 pkgrel=1
 pkgdesc='A fast and easy to use image viewer'
 url='https://apps.kde.org/gwenview/'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=(GPL LGPL FDL)
 groups=(kde-applications kde-graphics)
 depends=(kactivities baloo libkipi libkdcraw kparts kitemmodels cfitsio phonon-qt5 purpose perl)
@@ -18,11 +18,12 @@ optdepends=('qt5-imageformats: support for tiff, webp, and more image formats'
             'kamera: import pictures from gphoto2 cameras')
 makedepends=(extra-cmake-modules kdoctools)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('cb52ae1aad0c62072d5ad0d0bdd2e2fbb89b2dd4dead1d5e44d5cbac0b34a8be'
+sha256sums=('28d10e121394e4c710c77f2d46e18fc881c57613603ed65bfd892d4e79f67a7d'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
               D81C0CB38EB725EF6691C385BB463350D6EF31EF) # Heiko Becker <heiko.becker@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
