--- a/go/consul/PKGBUILD
+++ b/go/consul/PKGBUILD
@@ -3,14 +3,14 @@
 # Maintainer: Felix Yan <felixonmars@archlinux.org>
 
 pkgname=consul
-pkgver=1.11.1
+pkgver=1.11.4
 pkgrel=1
 pkgdesc="A tool for service discovery, monitoring and configuration."
 arch=(x86_64 powerpc64le)
 url="https://www.consul.io"
 license=('MPL2')
 depends=('glibc')
-makedepends=('git' 'go' 'go-bindata-assetfs' 'go-bindata-hashicorp' 'procps-ng' 'zip' 'yarn' 'bower' 'nodejs-lts-dubnium' 'zip' 'gox' 'go-tools')
+makedepends=('git' 'go' 'go-bindata-assetfs' 'go-bindata-hashicorp' 'procps-ng' 'zip' 'yarn' 'bower' 'nodejs' 'zip' 'gox' 'go-tools')
 source=("${pkgname}-${pkgver}.tar.gz::https://github.com/hashicorp/consul/archive/v${pkgver}.tar.gz"
         'consul.service'
         'consul.default'
@@ -21,7 +21,7 @@ source=("${pkgname}-${pkgver}.tar.gz::https://github.com/hashicorp/consul/archiv
         )
 install=consul.install
 backup=('etc/default/consul')
-sha512sums=('4558b6eb880b305863e9ba6aac01b37439267e71416608b8e6d60931fca5de7fafabaa552673f92afedc22ab3b8167511e4f8bb748004d809536b44678c15da3'
+sha512sums=('1928c91cfb316228f77472e488fc697a3d798d270b57dec36c13734045eb87fc57ee3c6eeb8be0cab3a4af6f5f733512cd972420a175e6d33df053f7679bddab'
             'c70b9d1556f6c7ecb2e915ab685f289cef0e31198bd2e50c74a0483bbfb387beec67334f539a90adbf68b61b07946e98b300ab8a8e26e53b35f4ab4894adeb04'
             'ec5a800529a297c709fa383c094ecf106351cf0f8ac7b613b972d415d77fe001088902d7ab805e63e78a8e6360323fec1b795db5a4446df1e21b9b4ed31e7079'
             'ef872aedb2bc022a29292b7972a792b22e684c1ccb904a2b2cfec6d8966c28fb19be1452ce060821c419f1b646b236ba2e783175595e4bb6926d164c27a15c87'
@@ -34,11 +34,18 @@ export CGO_CXXFLAGS="${CXXFLAGS}"
 # consul is incompatible with -buildmode=pie
 export GOFLAGS="-trimpath -mod=readonly -modcacherw"
 
+mkdir -p ${srcdir}/tmp
+export TMPDIR=${srcdir}/tmp
+
 export GOOS='linux'
 case "${CARCH}" in
   powerpc64le)
     export GOARCH='ppc64le'
     export XC_OSARCH='linux/ppc64le'
+    ;;
+  riscv64)
+    export GOARCH='riscv64'
+    export XC_OSARCH='linux/riscv64'
     ;;
   x86_64)
     export GOARCH='amd64'
