--- a/kde/incidenceeditor/PKGBUILD
+++ b/kde/incidenceeditor/PKGBUILD
@@ -2,20 +2,21 @@
 # Maintainer: Antonio Rojas <arojas@archlinux.org>
 
 pkgname=incidenceeditor
-pkgver=21.12.1
+pkgver=21.12.3
 pkgrel=1
 pkgdesc='KDE PIM incidence editor'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://kontact.kde.org'
 license=(LGPL)
 depends=(eventviews)
 makedepends=(extra-cmake-modules boost qt5-tools doxygen)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('b300a0e5dcd621d9b987dbb61e7bd4c9159c31e3aaa152f299029b5b650855c5'
+sha256sums=('aa278c3710a08622fedb2e38d329947aa03bbe30c4101ec7831ce2fb9ea36ee9'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
               D81C0CB38EB725EF6691C385BB463350D6EF31EF) # Heiko Becker <heiko.becker@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
