--- a/at-spi2-core/PKGBUILD
+++ b/at-spi2-core/PKGBUILD
@@ -3,16 +3,17 @@
 # Contributor: Ionut Biru <ibiru@archlinux.org>
 
 pkgname=at-spi2-core
-pkgver=2.42.0
-pkgrel=1
+pkgver=2.44.0
+pkgrel=2
 pkgdesc="Protocol definitions and daemon for D-Bus at-spi"
 url="https://gitlab.gnome.org/GNOME/at-spi2-core"
 arch=(x86_64 powerpc64le powerpc riscv64)
 license=(GPL2)
-depends=(dbus glib2 libxtst libsystemd)
-makedepends=(gobject-introspection git gtk-doc meson dbus-broker systemd)
+depends=(dbus glib2 libxtst systemd)
+makedepends=(gobject-introspection git gtk-doc meson dbus-broker)
 optdepends=('dbus-broker: Alternative bus implementation')
-_commit=b22b7dcfcb34f01218de0f6aa0d10b4d34fb07aa  # tags/AT_SPI2_CORE_2_42_0^0
+options=(debug)
+_commit=f38e40e8685400ddb66759aa009e18c12c898de4  # tags/AT_SPI2_CORE_2_44_0^0
 source=("git+https://gitlab.gnome.org/GNOME/at-spi2-core.git#commit=$_commit")
 sha256sums=('SKIP')
 
@@ -26,7 +27,6 @@ prepare() {
 }
 
 build() {
-  CC=gcc \
   arch-meson $pkgname build \
     -D default_bus=dbus-broker \
     -D docs=true
