--- a/libmad/PKGBUILD
+++ b/libmad/PKGBUILD
@@ -5,7 +5,7 @@ pkgname=libmad
 pkgver=0.15.1b
 pkgrel=9
 pkgdesc="A high-quality MPEG audio decoder"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://www.underbit.com/products/mad/"
 license=('GPL')
 depends=('glibc')
