--- a/kde/k3b/PKGBUILD
+++ b/kde/k3b/PKGBUILD
@@ -3,7 +3,7 @@
 # Maintainer: Antonio Rojas <arojas@archlinux.org>
 
 pkgname=k3b
-pkgver=21.12.2
+pkgver=21.12.3
 pkgrel=2
 epoch=1
 pkgdesc='Feature-rich and easy to handle CD burning application'
@@ -11,7 +11,7 @@ arch=(x86_64 powerpc64le powerpc)
 url='https://apps.kde.org/k3b/'
 license=(GPL)
 depends=(libkcddb kcmutils knotifyconfig libmad kfilemetadata knewstuff
-         libmpcdec libdvdread libburn qt5-webkit)
+         libmpcdec libdvdread libburn libsamplerate qt5-webkit)
 makedepends=(extra-cmake-modules kdoctools)
 optdepends=('cdrtools: for CD burning with cdrecord'
             'dvd+rw-tools: for DVD burning support'
@@ -22,7 +22,7 @@ optdepends=('cdrtools: for CD burning with cdrecord'
 groups=(kde-applications kde-multimedia)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig}
         ffmpeg5.patch)
-sha256sums=('e9e7313a0835851753c9eb9ce20d830f382bd12057d7f1471686bf82f41f4f66'
+sha256sums=('acdbf40e1bccff837c50ba0a9d5e83370c24bc759c51d61385429ac3bf59f845'
             'SKIP'
             '4855cef052eebccbbcfabbb59b197cf9ed1703bbf548187a3596692821d89657')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
