--- a/kde/kaccounts-providers/PKGBUILD
+++ b/kde/kaccounts-providers/PKGBUILD
@@ -2,20 +2,21 @@
 # Maintainer: Antonio Rojas <arojas@archlinux.org>
 
 pkgname=kaccounts-providers
-pkgver=21.12.1
+pkgver=21.12.3
 pkgrel=1
 pkgdesc='Small system to administer web accounts for the sites and services across the KDE desktop, including: Google, Facebook, Owncloud, IMAP, Jabber and others'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://www.kde.org/'
 license=(GPL)
 depends=(kaccounts-integration)
 makedepends=(extra-cmake-modules intltool)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('6413be53fbb2229a55ec73161d53791a7c4e3ccbc70ea1a2e14d8d49a32d948a'
+sha256sums=('a09eed6a35e5f1909e4f8cdb9016ed0cd1fb33c34f5545f4c1e2a005d4dd9e4d'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
               D81C0CB38EB725EF6691C385BB463350D6EF31EF) # Heiko Becker <heiko.becker@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
