--- a/libetebase/PKGBUILD
+++ b/libetebase/PKGBUILD
@@ -2,20 +2,26 @@
 # Maintainer: Antonio Rojas <arojas@archlinux.org>
 
 pkgname=libetebase
-pkgver=0.5.0
+pkgver=0.5.3
 pkgrel=1
-pkgdesc="Etebase C library"
-arch=(x86_64 powerpc64le)
-url="https://github.com/etesync/libetebase"
+pkgdesc='Etebase C library'
+arch=(x86_64 powerpc64le powerpc riscv64)
+url='https://github.com/etesync/libetebase'
 license=(BSD)
-depends=(openssl gcc-libs)
+depends=(openssl gcc-libs libsodium)
 makedepends=(rust)
-source=("https://github.com/etesync/libetebase/archive/v$pkgver/$pkgname-$pkgver.tar.gz")
-sha256sums=('448f677bd24bb4315d0d29ae95f29b7841cb64c0af049952ecb634ab683eea9c')
+source=(https://github.com/etesync/libetebase/archive/v$pkgver/$pkgname-$pkgver.tar.gz)
+sha256sums=('78c79f72df40ae4ed85beca593d870159f923e8b9e0111c16e34b6142c634995')
+
+prepare() {
+  cd $pkgname-$pkgver
+  cargo fetch --locked --target "$CARCH-unknown-linux-gnu"
+}
 
 build() {
   cd $pkgname-$pkgver
-  make
+  env CARGO_INCREMENTAL=0 SODIUM_USE_PKG_CONFIG= cargo build --release --locked --offline
+  make pkgconfig
 }
 
 package() {
