--- a/libkolabxml/PKGBUILD
+++ b/libkolabxml/PKGBUILD
@@ -4,10 +4,10 @@
 
 pkgname=libkolabxml
 pkgver=1.1.6
-pkgrel=16
+pkgrel=17
 pkgdesc="Kolab XML Format Schema Definitions Library"
 url='https://www.kolab.org/'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=('GPL')
 depends=('xerces-c' 'boost-libs')
 makedepends=('cmake' 'boost' 'xsd' 'swig')
