--- a/lirc/PKGBUILD
+++ b/lirc/PKGBUILD
@@ -5,7 +5,7 @@
 pkgname=lirc
 _pkgver=0.10.1
 [[ $_pkgver =~ [a-z]$ ]] && pkgver="${_pkgver:0:-1}.${_pkgver: -1}" || pkgver="$_pkgver"
-pkgrel=10
+pkgrel=12
 epoch=1
 pkgdesc="Linux Infrared Remote Control utilities"
 arch=(x86_64 powerpc64le powerpc riscv64)
@@ -13,8 +13,10 @@ url="https://www.lirc.org/"
 license=('GPL')
 depends=('alsa-lib' 'libx11' 'libftdi' 'libusb-compat')
 makedepends=('help2man' 'alsa-lib' 'libx11' 'libxslt' 'python' 'python-setuptools'
-             'systemd')
-optdepends=('python: for lirc-setup, irdb-get and pronto2lirc')
+             'python-yaml' 'systemd')
+optdepends=('python: for lirc-setup, irdb-get and pronto2lirc'
+            'python-gobject: for lirc-setup and irdb-get'
+            'python-yaml: for lirc-setup and irdb-get')
 provides=('lirc-utils')
 conflicts=('lirc-utils')
 replaces=('lirc-utils')
@@ -22,16 +24,19 @@ backup=('etc/lirc/lirc_options.conf' 'etc/lirc/lircd.conf' 'etc/lirc/lircmd.conf
 source=("https://prdownloads.sourceforge.net/${pkgname}/${pkgname}-${_pkgver}.tar.bz2"
         lirc-0.10-build-fix.patch
         lirc.logrotate
-        lirc.tmpfiles)
+        lirc.tmpfiles
+        python-yaml-6.patch)
 sha1sums=('9d6f6d18ac566a96ef4ca1d6909a4e8bc517d48a'
           '952ce902c94d822b0113d8e74bc6fda6a551ad7e'
           '4342b004eb53d51fcbb9af2cf136bb4990874608'
-          '5cd3f206e6e60632d9bea2ce9d22dbe5283eb129')
+          '5cd3f206e6e60632d9bea2ce9d22dbe5283eb129'
+          '3d6d40bba363051ae36c09709dc5a41166cf2d51')
 
 prepare() {
   cd "${srcdir}/lirc-${_pkgver}"
 
   patch -p1 -i ../lirc-0.10-build-fix.patch
+  patch -p1 -i ../python-yaml-6.patch # Fix build with python-yaml 6
 
   autoreconf -fi
   automake -ac
@@ -40,7 +45,13 @@ prepare() {
 build() {
   cd "${srcdir}/lirc-${_pkgver}"
 
-  HAVE_UINPUT=1 ./configure --prefix=/usr --sbindir=/usr/bin --sysconfdir=/etc --localstatedir=/var
+  ./configure \
+    --prefix=/usr \
+    --sbindir=/usr/bin \
+    --sysconfdir=/etc \
+    --localstatedir=/var \
+    --enable-devinput \
+    --enable-uinput
   sed -i -e 's/ -shared / -Wl,-O1,--as-needed\0/g' libtool
   make
 }
