--- a/ftgl/PKGBUILD
+++ b/ftgl/PKGBUILD
@@ -8,7 +8,7 @@ _pkgver=2.1.3-rc5
 pkgver=2.4.0
 pkgrel=2
 pkgdesc="OpenGL library to use arbitrary fonts"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://github.com/frankheckenbach/ftgl"
 license=(MIT)
 depends=(freetype2 glu)
