--- a/libdvbpsi/PKGBUILD
+++ b/libdvbpsi/PKGBUILD
@@ -5,30 +5,30 @@
 
 pkgname=libdvbpsi
 pkgver=1.3.3
-pkgrel=2
+pkgrel=2.1
 epoch=1
 pkgdesc='Library designed for decoding and generation of MPEG TS and DVB PSI tables'
 url='https://www.videolan.org/developers/libdvbpsi.html'
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=('LGPL2.1')
 depends=('glibc')
 provides=('libdvbpsi.so')
-source=(${pkgname}-${pkgver}.tar.bz2::https://code.videolan.org/videolan/libdvbpsi/repository/${pkgver}/archive.tar.bz2)
-sha512sums=('d68bb742b22cc525f04e48597edb9a6ffeccfecd16e2cb9e16cf0f80cbd755bc9d3dc50e4679b2c2be107bb8f18717060d0f80a9994a0060c80a7b98b2cc4354')
+source=(https://download.videolan.org/pub/libdvbpsi/${pkgver}/${pkgname}-${pkgver}.tar.bz2)
+sha512sums=('70f9e783a947e026ea50afe98ad2b3bfce075bd8d76932f73a6253b077a3a180aa632e9a1fff20308e2f0f3f881d727b4e4aad9b8da2b384edf9a3a0f9eacc69')
 
 prepare() {
-  cd ${pkgname}-${pkgver}-*
+  cd ${pkgname}-${pkgver}
   autoreconf -fiv
 }
 
 build() {
-  cd ${pkgname}-${pkgver}-*
+  cd ${pkgname}-${pkgver}
   ./configure --prefix=/usr
   make
 }
 
 package() {
-  cd ${pkgname}-${pkgver}-*
+  cd ${pkgname}-${pkgver}
   make DESTDIR="${pkgdir}" install
 }
 
