--- a/vcdimager/PKGBUILD
+++ b/vcdimager/PKGBUILD
@@ -8,7 +8,7 @@ pkgver=2.0.1
 pkgrel=4
 pkgdesc="A full-featured mastering suite for authoring disassembling and analyzing Video CD's and Super Video CD's"
 url="https://www.gnu.org/software/vcdimager/"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=(GPL)
 depends=(libcdio libxml2 popt)
 source=(https://ftp.gnu.org/gnu/vcdimager/$pkgname-$pkgver.tar.gz{,.sig})
