--- a/libtiger/PKGBUILD
+++ b/libtiger/PKGBUILD
@@ -8,7 +8,7 @@ pkgrel=6
 pkgdesc="A rendering library for Kate streams using Pango and Cairo"
 url="https://code.google.com/archive/p/libtiger/"
 license=('LGPL')
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 depends=('pango' 'libkate')
 makedepends=('pkg-config')
 source=(https://download.videolan.org/contrib/tiger/$pkgname-$pkgver.tar.gz)
