--- a/vlc/PKGBUILD
+++ b/vlc/PKGBUILD
@@ -5,17 +5,18 @@
 # Contributor: Martin Sandsmark <martin.sandsmark@kde.org>
 
 pkgname=vlc
-_vlcver=3.0.16
+_vlcver=3.0.17.3
 # optional fixup version including hyphen
 _vlcfixupver=
 pkgver=${_vlcver}${_vlcfixupver//-/.r}
-pkgrel=3
+pkgrel=1
 pkgdesc='Multi-platform MPEG, VCD/DVD, and DivX player'
 url='https://www.videolan.org/vlc/'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=('LGPL2.1' 'GPL2')
+# NOTE: switch to ffmpeg4.4, as ffmpeg >= 5 requires extensive changes disabling VAAPI (only supported with vlc >= 4)
 depends=('a52dec' 'libdvbpsi' 'libxpm' 'libdca' 'libproxy' 'lua52' 'libidn'
-         'libmatroska' 'taglib' 'libmpcdec' 'ffmpeg' 'faad2' 'libmad'
+         'libmatroska' 'taglib' 'libmpcdec' 'ffmpeg4.4' 'faad2' 'libmad'
          'libmpeg2' 'xcb-util-keysyms' 'libtar' 'libxinerama' 'libsecret'
          'libupnp' 'libixml.so' 'libupnp.so' 'libarchive' 'qt5-base'
          'qt5-x11extras' 'qt5-svg' 'freetype2' 'fribidi' 'harfbuzz'
@@ -23,14 +24,16 @@ depends=('a52dec' 'libdvbpsi' 'libxpm' 'libdca' 'libproxy' 'lua52' 'libidn'
 makedepends=('gst-plugins-base-libs' 'live-media' 'libnotify' 'libbluray'
              'flac' 'libdc1394' 'libavc1394' 'libcaca' 'gtk3'
              'librsvg' 'libgme' 'xosd' 'twolame' 'aalib' 'avahi' 'systemd-libs'
-             'libmtp' 'libupnp' 'libmicrodns' 'libdvdcss' 'smbclient'
+             'libmtp' 'libmicrodns' 'libdvdcss' 'smbclient'
              'vcdimager' 'libssh2' 'mesa' 'protobuf' 'libnfs' 'mpg123'
              'libdvdread' 'libdvdnav' 'libogg' 'libshout' 'libmodplug' 'libvpx'
              'libvorbis' 'speex' 'opus' 'libtheora' 'libpng' 'libjpeg-turbo'
              'libx265.so' 'libx264.so' 'zvbi' 'libass' 'libkate' 'libtiger'
              'sdl_image' 'libpulse' 'alsa-lib' 'jack' 'libsamplerate' 'libsoxr'
-             'lirc' 'projectm' 'chromaprint' 'aom' 'srt' 'dav1d'
+             'lirc' 'projectm' 'aom' 'srt' 'dav1d'
              'aribb24' 'aribb25' 'pcsclite')
+
+#            'chromaprint: Chromaprint audio fingerprinter'
 optdepends=('avahi: service discovery using bonjour protocol'
             'aom: AOM AV1 codec'
             'gst-plugins-base-libs: for libgst plugins'
@@ -58,7 +61,6 @@ optdepends=('avahi: service discovery using bonjour protocol'
             'protobuf: chromecast streaming'
             'libmicrodns: mDNS services discovery (chromecast etc)'
             'lua52-socket: http interface'
-            'live-media: RTSP input'
             'libdvdread: DVD input module'
             'libdvdnav: DVD with navigation input module'
             'libogg: Ogg and OggSpots codec'
@@ -87,7 +89,6 @@ optdepends=('avahi: service discovery using bonjour protocol'
             'jack: jack audio server'
             'libsamplerate: audio Resampler'
             'libsoxr: SoX audio Resampler'
-            'chromaprint: Chromaprint audio fingerprinter'
             'lirc: lirc control'
             'projectm: ProjectM visualisation'
             'ncurses: ncurses interface'
@@ -98,15 +99,15 @@ optdepends=('avahi: service discovery using bonjour protocol'
             'pcsclite: aribcam support')
 conflicts=('vlc-plugin')
 replaces=('vlc-plugin')
-options=('!emptydirs')
+options=(debug '!emptydirs')
 source=(https://download.videolan.org/${pkgname}/${_vlcver}/${pkgname}-${_vlcver}${_vlcfixupver}.tar.xz{,.asc}
         update-vlc-plugin-cache.hook
-        vlc-3.0.11.1-srt_1.4.2.patch
+        caca-fix-to-newer-version.patch
         vlc-live-media-2021.patch)
-sha512sums=('35cdf191071224d0cf1b5a83c00773ff87b9e5bfcf0f5523f7edd53f75b23eda6b27bb49ffa97d69a1d176b8fe4786d959aeeb00d4380beab71c9f7e6b7c7298'
+sha512sums=('99095b39ed600c3a89ebc0d377a2fc2522b3623a56b0f6de2df50a3c6e0148c67c28c0f2d8dec28bbdf5c62cf29b3579429a79ed00440570643778a9871022b6'
             'SKIP'
             'b247510ffeadfd439a5dadd170c91900b6cdb05b5ca00d38b1a17c720ffe5a9f75a32e0cb1af5ebefdf1c23c5acc53513ed983a736e8fa30dd8fad237ef49dd3'
-            'ac1d33d434aca2a0ad6e70800073deeaefc02b8fd72656b682ca833ee0cffe10dfa19a9355388700cab46ffbf9421c007d00ed04c7fa562698ff81e70db5f283'
+            'ef479a246dc98f882a05ca56a1c2872cc67ced154c625790070b887858ddc250d55b1295db82c9122e5ecd3c2c9c712ec9718e28d0a9d21ff6a230eb6c5010ce'
             'ad17d6f4f2cc83841c1c89623c339ec3ee94f6084ea980e2c8cbc3903854c85e5396e31bfd8dc90745b41794670903d854c4d282d8adec263087a9d47b226ccc')
 validpgpkeys=('65F7C6B4206BD057A7EB73787180713BE58D1ADC') # VideoLAN Release Signing Key
 
@@ -130,13 +131,21 @@ prepare() {
 build() {
   cd ${pkgname}-${_vlcver}
 
-  export CFLAGS+=" -I/usr/include/samba-4.0"
+  export CFLAGS+=" -I/usr/include/samba-4.0 -ffat-lto-objects"
   export CPPFLAGS+=" -I/usr/include/samba-4.0"
   export CXXFLAGS+=" -std=c++11"
   # upstream doesn't support lua 5.4 yet: https://trac.videolan.org/vlc/ticket/25036
   export LUAC=/usr/bin/luac5.2
   export LUA_LIBS="$(pkg-config --libs lua5.2)"
   export RCC=/usr/bin/rcc-qt5
+  export PKG_CONFIG_PATH="/usr/lib/ffmpeg4.4/pkgconfig/:$PKG_CONFIG_PATH"
+
+  case "${CARCH}" in
+    riscv64)
+      export CFLAGS+=" -latomic"
+      export CXXFLAGS+=" -latomic"
+    ;;
+  esac
 
   ./configure \
     --prefix=/usr \
@@ -207,7 +216,7 @@ build() {
     --enable-jack \
     --enable-samplerate \
     --enable-soxr \
-    --enable-chromaprint \
+    --disable-chromaprint \
     --enable-chromecast \
     --enable-qt \
     --enable-skins2 \
@@ -235,6 +244,9 @@ build() {
     --enable-aom \
     --enable-srt \
     --enable-dav1d
+
+  # prevent excessive overlinking due to libtool
+  sed -i -e 's/ -shared / -Wl,-O1,--as-needed\0/g' libtool
   make
 }
 
