--- a/mercurial/PKGBUILD
+++ b/mercurial/PKGBUILD
@@ -4,14 +4,14 @@
 # Contributor: Douglas Soares de Andrade <douglas@archlinux.org>
 
 pkgname=mercurial
-pkgver=6.0.2
-pkgrel=1
+pkgver=6.1
+pkgrel=2
 pkgdesc='A scalable distributed SCM tool'
 arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://www.mercurial-scm.org/"
 license=(GPL)
 depends=(python)
-makedepends=('python-docutils')
+makedepends=(python-docutils)
 optdepends=('tk: for the hgk GUI')
 #checkdepends=('breezy' 'cvs' 'git' 'git-lfs' 'python-docutils' 'subversion' 'unzip')
 
@@ -29,7 +29,7 @@ validpgpkeys=(2BCCE14F5C6725AA2EA8AEB7B9C9DC824AA5BDD5
               1F66F8CDF654E905C11DA061A11E01CD0E05D956) # Raphaël Gomès <alphare@raphaelgomes.dev>
 source=(https://www.mercurial-scm.org/release/${pkgname}-${pkgver}.tar.gz{,.asc}
         mercurial.profile)
-sha512sums=('1591618840a3e4b862f0eb9e560d511b59eb34815de2e6e6cc1179d32f88a1e9a6f14abf3e02d76e17dbab1ffe384e52d97721e39da252ac5ba98a2233853c9a'
+sha512sums=('489b2c893bcfd243d9825cd78f1d8b6e0eddccdf92d16cbdbdb2ade40150b599a6d5df213e06d50c31489ee6c5203e35f21892b6439d9190757d5a36c6422338'
             'SKIP'
             '710dcddb24d928efc97370e869d9caa083107929ed9a1086dd2a3ae0caaf2c71e2f29060597e29315b6b15b1616251c42412e268ce737109c48ae4d7aa1b9555')
 
@@ -47,7 +47,7 @@ check() {
 
 package() {
   cd $pkgname-$pkgver
-  python setup.py install --root="$pkgdir" --optimize=1
+  python setup.py install --root="$pkgdir" --skip-build --optimize=1
   make DESTDIR="${pkgdir}" PREFIX=/usr install
 
   install -m644 -D contrib/zsh_completion "$pkgdir/usr/share/zsh/site-functions/_hg"
