--- a/memcached/PKGBUILD
+++ b/memcached/PKGBUILD
@@ -4,11 +4,11 @@
 # Contributor: Michael Irwin <6d6469@gmail.com>
 
 pkgname=memcached
-pkgver=1.6.10
+pkgver=1.6.14
 pkgrel=1
 pkgdesc='Distributed memory object caching system'
 url='https://memcached.org/'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=('GPL')
 depends=('glibc' 'libevent' 'libseccomp' 'libseccomp.so')
 optdepends=('perl: for memcached-tool usage')
@@ -16,7 +16,7 @@ source=(https://www.memcached.org/files/${pkgname}-${pkgver}.tar.gz
         memcached.service.patch
         memcached.tmpfiles
         memcached.sysusers)
-sha512sums=('46d41c87afd0fb3a15bd418d757a25f93bee7d052653a488b4bc29a795826b9c238590cd9ee602ca4e5f645ece74685c644a9bb12bb58ff79b098c4fcf5b3835'
+sha512sums=('607b5c0d4c721c714b6e6e3fbca4845fc24103e1dfb988a2edf818b78f918eeb71b86b211e311dc2bcbc438a9a0ffcb69a3bd6694b591720ede8b5349c804740'
             'dd21f49062054c601469f9abc9ee39a0f06c604e8805e7bc9bf2cfa65429962f93e7ac67764257c578fc15b1e75394956f350162c99b084c76a6e14d9331f31f'
             '960705ff74d25afed477e0b2a5872a3a4fb49ed3105a351f0d0224abc947778f9dbda81e80be94ab636da4a8411a9dd56a8fd4513e5b86a3096a14fa67f1548b'
             'e6ddcab9a6fee024072b6363ef60aa176ed258369bf3a17d475f19b1f410ffd6195b9c5737dc5b1371e8974b44bdbdaa109927acaeb54fb40302a5d67d7c13a8')
