--- a/crun/PKGBUILD
+++ b/crun/PKGBUILD
@@ -3,20 +3,19 @@
 # Contributor: hexchian <i at hexchain dot org>
 
 pkgname=crun
-pkgver=1.0
+pkgver=1.4.4
 pkgrel=1
 pkgdesc="A fast and lightweight fully featured OCI runtime and C library for running containers"
 url="https://github.com/containers/crun"
 license=('LGPL')
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 depends=('yajl' 'systemd-libs' 'libcap' 'libseccomp')
-makedepends=('libtool' 'python' 'go-md2man' 'systemd')
-optdepends=(
-    'criu: checkpoint support'
-)
+depends_powerpc64le=('criu')
+depends_x86_64=('criu')
+makedepends=('libtool' 'python' 'go-md2man' 'systemd' 'git')
 source=("https://github.com/containers/crun/releases/download/$pkgver/$pkgname-$pkgver.tar.xz"{,.asc})
 validpgpkeys=('AC404C1C0BF735C63FF4D562263D6DF2E163E1EA')
-sha256sums=('1db52e6a9c34d44dc49da6a35ac989d59865cec3267e443696f0ed1f4db31103'
+sha256sums=('330b064c82d7e845861c479f90fbc181976b93174e7c94b0487938c6f225cc65'
             'SKIP')
 
 build() {
@@ -24,7 +23,9 @@ build() {
     ./autogen.sh
     ./configure \
         --prefix=/usr \
-        --enable-dynamic
+        --enable-shared \
+        --enable-dynamic \
+        --with-python-bindings
     make
 }
 
