--- a/lksctp-tools/PKGBUILD
+++ b/lksctp-tools/PKGBUILD
@@ -6,7 +6,7 @@ pkgname=lksctp-tools
 pkgver=1.0.19
 pkgrel=1
 pkgdesc='An implementation of the SCTP protocol'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://github.com/sctp/lksctp-tools'
 license=('GPL2' 'LGPL2.1')
 makedepends=('git')
