--- a/psmisc/PKGBUILD
+++ b/psmisc/PKGBUILD
@@ -2,15 +2,16 @@
 # Maintainer: Eric Bélanger <eric@archlinux.org>
 
 pkgname=psmisc
-pkgver=23.4
-pkgrel=1
+pkgver=23.5rc1
+pkgrel=2
 pkgdesc='Miscellaneous procfs tools'
 arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://gitlab.com/psmisc/psmisc'
 license=('GPL')
 depends=('ncurses')
+options=('debug')
 source=("https://downloads.sourceforge.net/psmisc/${pkgname}-${pkgver}.tar.xz")
-sha256sums=('7f0cceeace2050c525f3ebb35f3ba01d618b8d690620580bdb8cd8269a0c1679')
+sha256sums=('a1213aa338ca1406715aaaa9e8a653dfe2da5acc54e291c876b42247fe1d85ff')
 
 build() {
   cd ${pkgname}-${pkgver}
