--- a/erlang-nox/PKGBUILD
+++ b/erlang-nox/PKGBUILD
@@ -7,11 +7,11 @@
 # Contributor: Ricardo Catalinas Jiménez <jimenezrick@gmail.com>
 
 pkgname=erlang-nox
-pkgver=24.1.0
+pkgver=24.3.2
 pkgrel=1
-_docver=24.1
+_docver=24.2
 pkgdesc='General-purpose concurrent functional programming language (headless version)'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://erlang.org/'
 license=(Apache)
 depends=(ncurses openssl)
@@ -24,16 +24,17 @@ options=(staticlibs)
 source=(epmd.conf
         epmd.service
         epmd.socket
-        "https://www.erlang.org/download/otp_doc_man_$_docver.tar.gz"
-        "git+https://github.com/erlang/otp#commit=1b0a9a039a1d078c8e4f25f3eaa765259b256ace") # tag: OTP-24.1
+        "$url/download/otp_doc_man_$_docver.tar.gz"
+        "git+https://github.com/erlang/otp#commit=7bd6e24d3dded3a393f9bb774ccf98cc0af4d595") # tag: OTP-24.3.2
 b2sums=('1675ac9bf948ab19e8b63077d870ccf356fcdbce14de2777f00b3488aa1ce34a5e0a5cdc0428707f744dee5940b12653a44e0ded0554de95ebb31bce4676ff87'
         '1f765318bcd322ce697a48c064ccdb1bd107b4a84e164a87f62678391cb82a9ab17a397d679cf266e037a5a2d91772b85f7a97f9cc5478c0f18118743b30045f'
         'c37706f5f6e2d49100104fb442ebf15edd6ee0a1e8038d0364794cf34fd3f02a61b9ad2706228b3327b85b0cadcd11aac6087e7c98408eae2d307a09191b6553'
-        '092c7870914e108e3fe06b68be6c54cff508cd938b5b510ca9a7c946b786e5725ffa1f2c87282a36480a9c1c7d7c899e8118546102a98136f813309a7f0bd334'
+        '17cf3c1e296c883e9c930cd540d439f7dd71a40048bbe80efd6f46dd5b4d9faf51177d2bb133f782742b0b367c8f54c27ed2b2cce277372a98dd55bb629f3b55'
         'SKIP')
 
 build() {
   cd otp
+  export CFLAGS+=' -ffat-lto-objects'
   ./otp_build autoconf
   ./configure \
     --enable-builtin-zlib \
