--- a/atkmm/PKGBUILD
+++ b/atkmm/PKGBUILD
@@ -8,7 +8,7 @@ pkgver=2.28.2
 pkgrel=2
 pkgdesc="C++ bindings for ATK"
 url="https://www.gtkmm.org/"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=(LGPL)
 depends=(atk glibmm)
 makedepends=(git meson mm-common glibmm-docs)
