--- a/gtkmm/PKGBUILD
+++ b/gtkmm/PKGBUILD
@@ -9,7 +9,7 @@ pkgrel=4
 epoch=1
 pkgdesc="C++ bindings for GTK+ 2"
 url="http://www.gtkmm.org/"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=(LGPL)
 depends=(gtk2 pangomm atkmm)
 source=(https://ftp.gnome.org/pub/GNOME/sources/$pkgbase/2.24/$pkgbase-$pkgver.tar.xz)
@@ -21,7 +21,7 @@ build() {
   # glibmm 2.46 uses C++11 features
   CXXFLAGS+=' -std=c++11'
 
-  ./configure --prefix=/usr
+  ./configure --prefix=/usr --build=${CHOST}
   sed -i -e 's/ -shared / -Wl,-O1,--as-needed\0/g' libtool
   make
 }
