--- a/gtkmm3/PKGBUILD
+++ b/gtkmm3/PKGBUILD
@@ -8,8 +8,7 @@ pkgver=3.24.5
 pkgrel=2
 pkgdesc="C++ bindings for GTK+ 3"
 url="https://www.gtkmm.org/"
-arch=(x86_64 powerpc64le powerpc)
-arch=(riscv64)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=(LGPL)
 depends=(gtk3 pangomm atkmm)
 makedepends=(git meson mm-common glibmm-docs cairomm-docs pangomm-docs
